fixing photo alignment

--- a/cliffsandcalories/css/style.css
+++ b/cliffsandcalories/css/style.css
@@ -74,11 +74,11 @@ a:hover {
 	padding-bottom: 20px;
 }
 
-#img_box_3 {
+#img_box_4 {
 	max-width: 380px;
 	max-height: 500px;
 	padding-bottom: 20px;
-	padding-right: 20px;
+	padding-left: 20px;
 }
 
 .col-sm-3:hover span.img-caption-text{
